--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "tw-eqsl-server",
   "version": "1.0.0",
-  "description": "TW eQSL generator with Sharp, Cloudinary and Render deployment",
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "npm install --force"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "express-fileupload": "^1.5.2",
     "sharp": "^0.33.3"
   },
