--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name":"tw-eqsl-server",
-  "version":"1.0.0",
-  "type":"module",
-  "scripts": { "start": "node server.js" },
+  "name": "tw-eqsl-server",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express":"^4.21.2",
-    "cors":"^2.8.5",
-    "express-fileupload":"^1.5.2",
-    "sharp":"^0.33.3",
-    "axios":"^1.6.8",
-    "cloudinary":"^1.41.3"
-  }
+    "axios": "^1.6.8",
+    "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.5.2",
+    "sharp": "^0.33.3"
+  },
+  "engines": { "node": ">=18" }
 }
