--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "tw-eqsl-server",
   "version": "1.0.0",
+  "description": "TW eQSL server",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
@@ -9,9 +11,11 @@
     "axios": "^1.6.8",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-fileupload": "^1.5.2",
     "sharp": "^0.33.3"
   },
-  "engines": { "node": ">=18" }
+  "engines": {
+    "node": ">=18"
+  }
 }
