--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "cloudinary": "^1.41.3",
+    "cloudinary": "^1.41.3"
     "cors": "^2.8.5",
     "express": "^4.21.2",
    "express-fileupload": "^1.4.3",
